tests/baselines/reference/classCannotExtendVar.errors.txt
==== tests/cases/compiler/classCannotExtendVar.ts (1 errors) ====
    var Markup;
    
    class Markup {
          ~~~~~~
!!! error TS2000: Duplicate identifier 'Markup'.
        constructor() {
        }
    }
    